[package]
name = "w25n01gv-rs"
version = "0.1.0"
authors = ["David Allen <19dallen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"

[dependencies.stm32l4xx-hal]
git = "https://github.com/DavidTheFighter/stm32l4xx-hal.git"
version = "0.6.0"
features = ["stm32l4x2"]

[dev-dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.3"
